# cpp-otus.04.allocator

./: .travis.yml  CMakeLists.txt  block_manager.h  direct_collector.h  helpers.h  logger.h  main.cpp  ptrs_manager.h  reserv_allocator.h  share.h  tests.cpp
